
###############################################################################
#                          RLWE ENCRYPTION SCHEME
###############################################################################

# C preprocessor flags
AM_CPPFLAGS             += -I$(top_srcdir)/include -I$(top_srcdir)/src

# Convenience library
noinst_LTLIBRARIES       = librlweenc.la
librlweenc_la_SOURCES    = rlwe_enc.c \
                           rlwe_enc.h \
                           rlwe_enc_params.c \
                           rlwe_enc_params.h

# Add any link library dependencies
librlweenc_la_LIBADD     = 

