
###############################################################################
#                     IDENTITY BASED ENCRYPTION SCHEME
###############################################################################

# C preprocessor flags
AM_CPPFLAGS             += -I$(top_srcdir)/include -I$(top_srcdir)/src

# Convenience library
noinst_LTLIBRARIES       = libibe.la
libibe_la_SOURCES        = dlp_ibe.h \
                           dlp_ibe.c \
                           dlp_ibe_params.c \
                           dlp_ibe_params.h

# Add any link library dependencies
libibe_la_LIBADD         = 

