
###############################################################################
#                         ENS ENCAPSULATION SCHEME
###############################################################################

# C preprocessor flags
AM_CPPFLAGS             += -I$(top_srcdir)/include -I$(top_srcdir)/src

# Convenience library
noinst_LTLIBRARIES       = libenskem.la
libenskem_la_SOURCES     = ens_kem.c \
                           ens_kem.h \
                           ens_kem_params.c \
                           ens_kem_params.h

# Add any link library dependencies
libenskem_la_LIBADD      = 
