
###############################################################################
#                          HARDWARE TEST KEM SCHEME
###############################################################################

# C preprocessor flags
AM_CPPFLAGS             += -I$(top_srcdir)/include -I$(top_srcdir)/src

# Convenience library
noinst_LTLIBRARIES       = libhwtestkem.la
libhwtestkem_la_SOURCES  = hw_test_kem.c \
                           hw_test_kem.h \
                           hw_test_kem_params.c \
                           hw_test_kem_params.h

# Add any link library dependencies
libhwtestkem_la_LIBADD   = 

