
###############################################################################
#                         KYBER ENCAPSULATION SCHEME
###############################################################################

# C preprocessor flags
AM_CPPFLAGS             += -I$(top_srcdir)/include -I$(top_srcdir)/src

# Convenience library
noinst_LTLIBRARIES       = libkyberkem.la
libkyberkem_la_SOURCES   = kyber_kem.c \
                           kyber_kem.h \
                           kyber_kem_params.c \
                           kyber_kem_params.h

# Add any link library dependencies
libkyberkem_la_LIBADD    = 

